[#1] mysql-items-create
